# poc-ollama-chat

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: usage.md
src/gemma_chat/: __init__.py  cli.py  client.py  config.py
